--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ eyre = "0.6"
 figment = "0.10.8"
 futures = "0.3"
 hex = "0.4"
+is-terminal = "0.4"
 # marking k8s as using k8s 1.26 here to make it clear that we are targetting 1.26
 # in the tests
 k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
