--- a/crates/astria-celestia-jsonrpc-client/Cargo.toml
+++ b/crates/astria-celestia-jsonrpc-client/Cargo.toml
@@ -13,6 +13,9 @@ jsonrpsee = { version = "0.18.2", features = ["macros", "client"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, features = ["raw_value"] }
 
+[features]
+server = ["jsonrpsee/server"]
+
 [dev-dependencies]
 astria-test-utils = { path = "../astria-test-utils" }
 serial_test = "2.0.0"
