--- a/crates/astria-gossipnet/Cargo.toml
+++ b/crates/astria-gossipnet/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2021"
 
 [dependencies]
 libp2p = { version = "0.51", features = ["kad", "gossipsub", "identify", "mdns", "noise", "macros", "ping", "tcp", "tokio", "yamux"] }
-multiaddr = "0.17"
 
 color-eyre = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true }
+multiaddr = { workspace = true }
 tracing = { workspace = true }
 
 [dev-dependencies]
