--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ figment = "0.10.8"
 futures = "0.3"
 hex = "0.4"
 is-terminal = "0.4"
+jsonrpsee = { version = "0.18.2" }
 # marking k8s as using k8s 1.26 here to make it clear that we are targetting 1.26
 # in the tests
 k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
@@ -35,6 +36,7 @@ kube = { version = "0.82.2", default-features = false, features = [
   "rustls-tls",
 ] }
 minijinja = "0.32.1"
+multiaddr = "0.17"
 once_cell = "1.17.1"
 sha2 = "0.10"
 serde = "1"
@@ -58,6 +60,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 uuid = "1.3.1"
 which = "4.4.0"
+wiremock = "0.5"
 
 [patch.crates-io]
 # fix for astria-sequencer-client 
