--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -34,4 +34,5 @@ astria-sequencer-client = { path = "../astria-sequencer-client" }
 astria-sequencer-relayer = { path = "../astria-sequencer-relayer" }
 
 [dev-dependencies]
+base64 = { workspace = true }
 once_cell = { workspace = true }
