--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -25,6 +25,7 @@ hyper = { workspace = true }
 ethers = { version = "2.0.7", features = ["ws"] }
 tokio-stream = "0.1.14"
 hex = { workspace = true }
+eyre.workspace = true
 
 [dev-dependencies]
 once_cell = { workspace = true }
