--- a/crates/astria-celestia-jsonrpc-client/Cargo.toml
+++ b/crates/astria-celestia-jsonrpc-client/Cargo.toml
@@ -9,9 +9,13 @@ edition = "2021"
 base64.workspace = true
 base64-serde = "0.7.0"
 http = "0.2.9"
-jsonrpsee = { version = "0.18.2", features = ["macros", "client"] }
+
+jsonrpsee = { workspace = true, features = ["macros", "client"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, features = ["raw_value"] }
+
+[features]
+server = ["jsonrpsee/server"]
 
 [dev-dependencies]
 astria-test-utils = { path = "../astria-test-utils" }
