proto: commit generated code to repository
Committing the compiled protobufs to the
repository servces two purposes:

1. it is easier to discover the compiled rust
   types by simply navigating to the files;
2. users who just want to use the rust crates
   need not install buf and protoc to compile
   the protobufs to rust on every build.

While it is convention to not commit generated
code to the repository, I believe the two points
above are good arguments why one should do this
in this case. Also, the protobuf definitions are
not expected to change frequently.

--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -20,5 +20,6 @@ prost-types = { workspace = true }
 tendermint-proto = { workspace = true }
 tonic = { workspace = true }
 
-[build-dependencies]
+[dev-dependencies]
+tempfile = { workspace = true }
 which = { workspace = true }
