--- a/crates/astria-gossipnet/Cargo.toml
+++ b/crates/astria-gossipnet/Cargo.toml
@@ -13,6 +13,6 @@ multiaddr = { workspace = true }
 tracing = { workspace = true }
 
 [dev-dependencies]
-tempfile = "3.6"
+tempfile = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
