--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -27,6 +27,7 @@ ethers = { version = "2.0.7", features = ["ws"] }
 tokio-stream = "0.1.14"
 hex = { workspace = true }
 futures.workspace = true
+tendermint-rpc = "0.33.0"
 
 [dev-dependencies]
 once_cell = { workspace = true }
