--- a/crates/astria-proto/buf.gen.yaml
+++ b/crates/astria-proto/buf.gen.yaml
@@ -3,9 +3,9 @@ managed:
   enabled: true
 plugins:
   - plugin: buf.build/community/neoeinstein-prost:v0.2.3
-    out: .
+    out: ./src/proto/tonic
     opt:
      - extern_path=.tendermint.types=::tendermint-proto::types
      - type_attribute=.astria.primitive.v1.Uint128=#[derive(Copy)]
   - plugin: buf.build/community/neoeinstein-tonic:v0.3.0
-    out: .
+    out: ./src/proto/tonic
