--- a/.github/workflows/proto.yml
+++ b/.github/workflows/proto.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           # The 'main' branch of the GitHub repository that defines the module.
           input: "crates/astria-proto/proto"
-          against: "https://github.com/astriaorg/astria.git#branch=main,ref=HEAD~1,subdir=crates/astria-proto/proto"
+          against: "https://github.com/astriaorg/astria.git#branch=main,ref=HEAD,subdir=crates/astria-proto/proto"
   push:
     runs-on: ubuntu-latest
     environment: BUF
