--- a/.github/workflows/proto.yml
+++ b/.github/workflows/proto.yml
@@ -33,12 +33,11 @@ jobs:
       - uses: bufbuild/buf-lint-action@v1
         with:
           input: "crates/astria-proto"
-      # TODO(GH-29): Uncomment out after reaching any production stage
-      # - uses: bufbuild/buf-breaking-action@v1
-      #   with:
-      #     # The 'main' branch of the GitHub repository that defines the module.
-      #     input: "crates/astria-proto/proto"
-      #     against: "https://github.com/astriaorg/astria.git#branch=main,ref=HEAD~1,subdir=crates/astria-proto/proto"
+      - uses: bufbuild/buf-breaking-action@v1
+        with:
+          # The 'main' branch of the GitHub repository that defines the module.
+          input: "crates/astria-proto/proto"
+          against: "https://github.com/astriaorg/astria.git#branch=main,ref=HEAD,subdir=crates/astria-proto/proto"
   push:
     runs-on: ubuntu-latest
     environment: BUF
