--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -58,4 +58,6 @@ jobs:
           push: true
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
+          cache-to: type=inline
+          cache-from: type=registry,ref=${{ format('ghcr.io/astriaorg/{0}:latest', inputs.package-name) }}
         
