--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -59,5 +59,5 @@ jobs:
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
           cache-to: type=inline
-          cache-from: type=registry,ref=${{ format('ghcr.io/astriaorg/{0}:latest', inputs.package-name) }}
+          cache-from: type=registry,ref=${{ format('ghcr.io/astriaorg/{0}:pr-200', inputs.package-name) }}
         
