proto: put grpc server and client behind feature flagas
Making astria-proto a dependency should not also pull in
all of tonic. This commit adds the `client` and `server`
features so that the generated grpc client and/or server
only get built if requested.

--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -18,7 +18,11 @@ keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]
 prost = { workspace = true }
 prost-types = { workspace = true }
 tendermint-proto = { workspace = true }
-tonic = { workspace = true }
+tonic = { workspace = true, optional = true }
+
+[features]
+client = ["dep:tonic"]
+server = ["dep:tonic"]
 
 [dev-dependencies]
 tempfile = { workspace = true }
