--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,12 +1,14 @@
-proto:
-  - 'crates/astria-proto/**'
-  - '.github/workflows/proto.yml'
 ci:
   - '.github/workflows/**'
 conductor:
   - 'crates/astria-conductor/**'
 composer:
   - 'crates/astria-composer/**'
+docker:
+  - 'containerfiles/**'
+proto:
+  - 'crates/astria-proto/**'
+  - '.github/workflows/proto.yml'
 sequencer:
   - 'crates/astria-sequencer/**'
   - 'crates/astria-sequencer-client/**'
