--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@1.69.0
-      - uses: joroshiba/rust-cache@v2.5.1
+      - uses: astriaorg/buildjet-rust-cache@v2.5.1
       - name: Install buf cli
         uses: bufbuild/buf-setup-action@v1
         with:
@@ -31,7 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@1.69.0
-      - uses: joroshiba/rust-cache@v2.5.1
+      - uses: astriaorg/buildjet-rust-cache@v2.5.1
       - name: Build the jsonrpc client tests
         run: cargo test --release --no-run --package astria-celestia-jsonrpc-client
       - name: create kubernetes in docker cluster
@@ -80,7 +80,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@1.69.0
         with:
           components: clippy
-      - uses: joroshiba/rust-cache@v2.5.1
+      - uses: astriaorg/buildjet-rust-cache@v2.5.1
       - uses: bufbuild/buf-setup-action@v1
         with:
           version: "1.17.0"
