--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 sync_wrapper = "0.1.2"
+priority-queue = "1.3.2"
 
 async-trait = { workspace = true }
 base64 = { workspace = true }
@@ -31,7 +32,9 @@ tracing-subscriber = { workspace = true, features = ["ansi", "json"] }
 
 astria-proto = { path = "../astria-proto", features = ["client"] }
 astria-gossipnet = { path = "../astria-gossipnet" }
-astria-sequencer-client = { path = "../astria-sequencer-client", features = ["http"] }
+astria-sequencer-client = { path = "../astria-sequencer-client", features = [
+    "http",
+] }
 astria-sequencer-relayer = { path = "../astria-sequencer-relayer" }
 
 [dev-dependencies]
