--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 sync_wrapper = "0.1.2"
+priority-queue = "1.3.2"
 
 async-trait = { workspace = true }
 base64 = { workspace = true }
