Updated to match aip more closely

--- a/crates/astria-proto/proto/buf.yaml
+++ b/crates/astria-proto/proto/buf.yaml
@@ -7,4 +7,10 @@ breaking:
     - FILE
 lint:
   use:
-    - DEFAULT
+    - BASIC
+    - ENUM_VALUE_PREFIX
+    - ENUM_ZERO_VALUE_SUFFIX
+    - FILE_LOWER_SNAKE_CASE
+    - RPC_REQUEST_STANDARD_NAME
+    - PACKAGE_VERSION_SUFFIX
+    - SERVICE_SUFFIX
