--- a/crates/astria-gossipnet/Cargo.toml
+++ b/crates/astria-gossipnet/Cargo.toml
@@ -4,7 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-libp2p = { version = "0.51", features = ["kad", "gossipsub", "identify", "mdns", "noise", "macros", "ping", "tcp", "tokio", "yamux"] }
+libp2p = { version = "0.51", features = [
+  "kad",
+  "gossipsub",
+  "identify",
+  "mdns",
+  "noise",
+  "macros",
+  "ping",
+  "tcp",
+  "tokio",
+  "yamux",
+] }
 
 color-eyre = { workspace = true }
 futures = { workspace = true }
@@ -15,4 +26,9 @@ tracing = { workspace = true }
 [dev-dependencies]
 tempfile = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
-tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
+tokio = { workspace = true, features = [
+  "macros",
+  "rt-multi-thread",
+  "signal",
+  "sync",
+] }
