build composer docker image

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -17,6 +17,12 @@ on:
       - "main"
 
 jobs:
+  composer:
+    uses: './.github/workflows/reusable-docker-build.yml'
+    with:
+      package-name: composer
+      target-binary: astria-composer
+
   conductor:
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
