--- a/crates/astria-composer/env.example
+++ b/crates/astria-composer/env.example
@@ -7,7 +7,7 @@ ASTRIA_COMPOSER_API_LISTEN_ADDR="0.0.0.0:0"
 # Address of the RPC server for the sequencer chain
 ASTRIA_COMPOSER_SEQUENCER_URL="http://127.0.0.1:26657"
 
-# Chain ID that we want to connect to
+# Execution chain ID that we want to connect to
 ASTRIA_COMPOSER_CHAIN_ID="912559"
 
 # Address of the RPC server for execution
