--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,7 @@ tendermint-config = "0.32"
 tendermint-proto = "0.32"
 tendermint-rpc = "0.32"
 tokio = "1.28"
+tokio-stream="0.1"
 tonic = "0.9"
 tracing = "0.1"
 tracing-subscriber = "0.3"
