use cargo resolver 2, fix used features
This commit changes the cargo workspace to use resolver version 2.
Furthermore, it reduces the tokio features to the ones actually
needed in composer, and fixes sequencer-relayer's tendermint-rpc
features (which surfaced because of resolver 2).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,4 @@
 [workspace]
-
 members = [
   "crates/astria-celestia-jsonrpc-client",
   "crates/astria-composer",
@@ -12,6 +11,7 @@ members = [
   "crates/astria-sequencer-utils",
   "crates/astria-test-utils",
 ]
+resolver = "2"
 
 [workspace.dependencies]
 async-trait = "0.1.52"
