--- a/.github/workflows/reusable-docker-build.yml
+++ b/.github/workflows/reusable-docker-build.yml
@@ -9,6 +9,11 @@ on:
       target-binary:
         required: true
         type: string
+    secrets:
+      DOCKER_TOKEN:
+        required: true
+      DOCKER_USER:
+        required: true
 env:
   REGISTRY: ghcr.io
 
@@ -26,12 +31,17 @@ jobs:
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
-      - name: Log in to registry
+      - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       # Generate correct tabs and labels
       - name: Docker metadata
         id: metadata
