--- a/crates/astria-composer/local.env.example
+++ b/crates/astria-composer/local.env.example
@@ -8,7 +8,7 @@ ASTRIA_COMPOSER_API_LISTEN_ADDR="0.0.0.0:0"
 ASTRIA_COMPOSER_SEQUENCER_URL="http://127.0.0.1:26657"
 
 # Execution chain ID that we want to connect to
-ASTRIA_COMPOSER_CHAIN_ID="astria"
+ASTRIA_COMPOSER_CHAIN_ID="astriachain"
 
 # Address of the RPC server for execution
 ASTRIA_COMPOSER_EXECUTION_URL="ws://127.0.0.1:8545"
