feat(composer): read sequencer private key from env and track nonce (#239)
- reads sequencer private key from env;
- also track nonce for this account
closes  #215

--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 astria-sequencer = { path = "../astria-sequencer" }
 
 ethers = { version = "2.0.7", features = ["ws"] }
+secrecy = "0.8"
 
 async-trait = { workspace = true }
 axum = { workspace = true }
@@ -43,6 +44,7 @@ features = ["http"]
 impl-serde = "0.4.0"
 tokio-test = "0.4.2"
 
+borsh = { workspace = true }
 figment = { workspace = true, features = ["test"] }
 jsonrpsee = { workspace = true, features = ["macros", "server"] }
 once_cell = { workspace = true }
