--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -15,8 +15,11 @@ keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ed25519-consensus = "2.1.0"
+hex.workspace = true
 prost = { workspace = true }
 prost-types = { workspace = true }
+sha2.workspace = true
 tendermint-proto = { workspace = true }
 tonic = { workspace = true, optional = true }
 
