--- a/crates/astria-proto/Cargo.toml
+++ b/crates/astria-proto/Cargo.toml
@@ -15,16 +15,18 @@ keywords = ["astria", "grpc", "rpc", "blockchain", "execution", "protobuf"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ed25519-consensus = "2.1.0"
-hex.workspace = true
+ed25519-consensus = { workspace = true, optional = true}
+hex = { workspace = true, optional = true}
 prost = { workspace = true }
 prost-types = { workspace = true }
-sha2.workspace = true
+sha2 = { workspace = true, optional = true }
 tendermint-proto = { workspace = true }
 tonic = { workspace = true, optional = true }
 
 [features]
+default = ["native"]
 client = ["dep:tonic"]
+native = ["dep:ed25519-consensus", "dep: hex", "dep:sha2"]
 server = ["dep:tonic"]
 
 [dev-dependencies]
