--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -35,6 +35,7 @@ astria-sequencer-client = { path = "../astria-sequencer-client", features = [
   "http",
 ] }
 astria-sequencer-relayer = { path = "../astria-sequencer-relayer" }
+astria-sequencer-types = { path = "../astria-sequencer-types" }
 
 [dev-dependencies]
 base64 = { workspace = true }
