--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 astria-sequencer = { path = "../astria-sequencer" }
 
 ethers = { version = "2.0.7", features = ["ws"] }
-secrecy = "0.8"
+secrecy = { version = "0.8", features = ["serde"] }
 
 async-trait = { workspace = true }
 axum = { workspace = true }
