define an astria-telemetry crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "crates/astria-sequencer-client",
   "crates/astria-sequencer-relayer",
   "crates/astria-sequencer-utils",
+  "crates/astria-telemetry",
   "crates/astria-test-utils",
 ]
 resolver = "2"
