--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -2,11 +2,13 @@
 name = "astria-composer"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.70.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 astria-sequencer = { path = "../astria-sequencer" }
+telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
 
 ethers = { version = "2.0.7", features = ["ws"] }
 secrecy = { version = "0.8", features = ["serde"] }
@@ -20,7 +22,6 @@ figment = { workspace = true, features = ["env"] }
 humantime = { workspace = true }
 hyper = { workspace = true }
 hex = { workspace = true }
-is-terminal = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 rand = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
@@ -33,7 +34,6 @@ tokio = { workspace = true, features = [
   "time",
 ] }
 tracing = { workspace = true, features = ["attributes"] }
-tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
 
 [dependencies.sequencer-client]
 package = "astria-sequencer-client"
