ci: ensure that crates compile outside of workspace (#259)
## Summary (why this PR?)

#239 added the secrecy crate to composer, which builds fine if cargo is
executed from the workspace root, but fails to build if run from the
crate manifest directory. This is because optional dependencies get
automatically activated if the dependency is used in any other crate or
dependency. This is due to how rust dependency resolution works.

## Changelist

+ add a CI workflow step running `cargo hack check --all` which ensures
that all crates build without workspace-wide dependency resolution.

## Breaking changes

None

## Related issues

+ https://github.com/astriaorg/astria/pull/239 (broke compilation with working directory set to `crates/astria-composer/`)

## Testing

None (CI either works or does not)

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,6 +10,18 @@ on:
   workflow_dispatch:
 
 jobs:
+  check_individual_compiles: 
+    runs-on: buildjet-4vcpu-ubuntu-2204
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@1.69.0
+      - uses: taiki-e/install-action@v2.15.2
+        with:
+          tool: cargo-hack@0.5.29
+      - uses: astriaorg/buildjet-rust-cache@v2.5.1
+      - name: Check that each crate compiles individually (circumventing workspace wide dependency resolution)
+        run: cargo hack check --all --all-features
+    
   test:
     # temporarily using GH runners
     # runs-on: buildjet-8vcpu-ubuntu-2204
