--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -11,6 +11,7 @@ astria-sequencer = { path = "../astria-sequencer" }
 ethers = { version = "2.0.7", features = ["ws"] }
 
 async-trait = { workspace = true }
+async-recursion = { workspace = true }
 axum = { workspace = true }
 backon = { workspace = true }
 color-eyre = { workspace = true }
