--- a/crates/astria-telemetry/Cargo.toml
+++ b/crates/astria-telemetry/Cargo.toml
@@ -7,7 +7,11 @@ rust-version = "1.70.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter", "json"] }
+tracing-subscriber = { version = "0.3.17", features = [
+  "fmt",
+  "env-filter",
+  "json",
+] }
 
 [dev-dependencies]
 tracing = { workspace = true }
