--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -22,8 +22,10 @@ figment = { workspace = true, features = ["env"] }
 humantime = { workspace = true }
 hyper = { workspace = true }
 hex = { workspace = true }
+once_cell = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 rand = { workspace = true }
+regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tendermint = { workspace = true }
@@ -48,6 +50,5 @@ tokio-test = "0.4.2"
 
 figment = { workspace = true, features = ["test"] }
 jsonrpsee = { workspace = true, features = ["macros", "server"] }
-once_cell = { workspace = true }
 tendermint-rpc = { workspace = true }
 wiremock = { workspace = true }
