--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -17,7 +17,12 @@ on:
       - "main"
 
 jobs:
+  run_checker:
+    uses: ./.github/workflows/reusable-run-checker.yml
+
   composer:
+    needs: run_checker
+    if: ${{ needs.run_checker.outputs.run_docker }}
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
       package-name: composer
@@ -25,6 +30,8 @@ jobs:
     secrets: inherit
 
   conductor:
+    needs: run_checker
+    if: ${{ needs.run_checker.outputs.run_docker }}
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
       package-name: conductor
@@ -32,6 +39,8 @@ jobs:
     secrets: inherit
 
   sequencer:
+    needs: run_checker
+    if: ${{ needs.run_checker.outputs.run_docker }}
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
       package-name: sequencer
@@ -39,8 +48,20 @@ jobs:
     secrets: inherit
 
   sequencer-relayer:
+    needs: run_checker
+    if: ${{ needs.run_checker.outputs.run_docker }}
     uses: './.github/workflows/reusable-docker-build.yml'
     with:
       package-name: sequencer-relayer
       target-binary: astria-sequencer-relayer
     secrets: inherit
+
+  success:
+    runs-on: ubuntu-latest
+    needs: [composer, conductor, sequencer, sequencer-relayer]
+    if: ${{ always() && !cancelled() }}
+    steps:
+      - if: ${{ contains(needs.*.result, 'failure') }}
+        run: exit 1
+      - if: ${{ !contains(needs.*.result, 'failure') }}
+        run: exit 0
