--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "crates/astria-sequencer-client",
   "crates/astria-sequencer-relayer",
   "crates/astria-sequencer-utils",
+  "crates/astria-telemetry",
   "crates/astria-test-utils",
 ]
 resolver = "2"
@@ -29,7 +30,6 @@ futures = "0.3"
 hex = "0.4"
 humantime = "2.1.0"
 hyper = "0.14"
-is-terminal = "0.4"
 jsonrpsee = { version = "0.19" }
 # marking k8s as using k8s 1.26 here to make it clear that we are targetting 1.26
 # in the tests
