--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -19,6 +19,7 @@ backon = { workspace = true }
 color-eyre = { workspace = true }
 ed25519-consensus = { workspace = true }
 figment = { workspace = true, features = ["env"] }
+futures = { workspace = true }
 humantime = { workspace = true }
 hyper = { workspace = true }
 hex = { workspace = true }
@@ -35,6 +36,7 @@ tokio = { workspace = true, features = [
   "sync",
   "time",
 ] }
+tokio-util = { version = "0.7.8", features = ["rt"] }
 tracing = { workspace = true, features = ["attributes"] }
 
 [dependencies.sequencer-client]
