composer: ingest transactions from multiple rollups (#277)
## Summary

This patch enables composer to read from multiple rollups that are
compatible with the
geth implementation of the ethereum execution API (due to its use of the
`eth_subscribe` JSONRPC).

This PR was the original of 3 PRs that that a) added a new config to
parse a list of rollups, b) implemented the logic to ingest transactions
from different rollups, and c) test the logic. These PRs were
subsequently merged into this patch.

## Background

It's a core requirement that composer be able to submit transactions
from different rollups to the sequencer using its private key.

## Changes

- parse `ASTRIA_COMPOSER_ROLLUPS` env var that takes a list of the form
`<chain_id>::<url>,<chain_id>::<url>`.
- define the `Collector` type to read new pending transactions from an
EVM rollup supporting the geth implementation of the ethereum execution
API (through `eth_subscribe`).
- Replace the the new pending transaction stream in searcher by an mpsc
channel that receives from a set of collector.
- start one collector per chain ID.
- Each collector tags its transaction with its unique chain ID.


## Testing

- The parsing logic comes with many tests for various scenarios.
- The blackbox tests were extended to read from 2 different collectors
implemented in terms of two separate mock servers.


## Breaking changes

+ env vars `ASTRIA_COMPOSER_CHAIN_ID` and
`ASTRIA_COMPOSER_EXECUTION_URL` are removed;
+ `ASTRIA_COMPOSER_ROLLUPS` must be set.

## Related issues

Original sibling PRs:
- https://github.com/astriaorg/astria/pull/277
- https://github.com/astriaorg/astria/pull/278 (the present PR)
- https://github.com/astriaorg/astria/pull/282

Closes https://github.com/astriaorg/astria/issues/214,
https://github.com/astriaorg/astria/issues/276

--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -19,11 +19,14 @@ backon = { workspace = true }
 color-eyre = { workspace = true }
 ed25519-consensus = { workspace = true }
 figment = { workspace = true, features = ["env"] }
+futures = { workspace = true }
 humantime = { workspace = true }
 hyper = { workspace = true }
 hex = { workspace = true }
+once_cell = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 rand = { workspace = true }
+regex = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tendermint = { workspace = true }
@@ -33,6 +36,7 @@ tokio = { workspace = true, features = [
   "sync",
   "time",
 ] }
+tokio-util = { version = "0.7.8", features = ["rt"] }
 tracing = { workspace = true, features = ["attributes"] }
 
 [dependencies.sequencer-client]
@@ -48,6 +52,5 @@ tokio-test = "0.4.2"
 
 figment = { workspace = true, features = ["test"] }
 jsonrpsee = { workspace = true, features = ["macros", "server"] }
-once_cell = { workspace = true }
 tendermint-rpc = { workspace = true }
 wiremock = { workspace = true }
