ci: broad restructuring of worklows (#280)
## Summary

Reorganizes our tests, reduces the number that run unnecessarily, and
makes it easier to add new required tests.

## Background

Three core issues solved at once:

- Currently we have test workflows split up by language, and concern
area. Linting is split across language workflows, for instance.
- Unnecessary tests + builds. Adding docs doesn't need to trigger a
docker build.
- GH matching on required tests is wonky, standardize to make it easier
to add new required tests via code instead of via settings.

## Changes

- Split up `rust.yml` between `test.yml` and `lint.yml`
- Split up `proto.yml` between `lint.yml` and `release.yml`
- Add reusable workflow which dictates which tests need to run,
configured for each test.
- Add a `success` test to each workflow that needs success which will
pass if tests do not fail.

## Testing

Will be testing by making a variety of changes back in forth in this PR
to make sure intended behavior persists.

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,5 +1,5 @@
 ci:
-  - '.github/workflows/**'
+  - '.github/**'
 conductor:
   - 'crates/astria-conductor/**'
 composer:
@@ -8,7 +8,6 @@ docker:
   - 'containerfiles/**'
 proto:
   - 'crates/astria-proto/**'
-  - '.github/workflows/proto.yml'
 sequencer:
   - 'crates/astria-sequencer/**'
   - 'crates/astria-sequencer-client/**'
@@ -16,3 +15,5 @@ sequencer:
 sequencer-relayer:
   - 'crates/astria-sequencer-relayer/**'
   - 'crates/astria-gossipnet/**'
+documentation:
+  - 'specs/**'
