--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -56,12 +56,6 @@ jobs:
       target-binary: astria-sequencer-relayer
     secrets: inherit
 
-  success:
-    runs-on: ubuntu-latest
+  docker:
     needs: [composer, conductor, sequencer, sequencer-relayer]
-    if: ${{ always() && !cancelled() }}
-    steps:
-      - if: ${{ contains(needs.*.result, 'failure') }}
-        run: exit 1
-      - if: ${{ !contains(needs.*.result, 'failure') }}
-        run: exit 0
+    uses: ./.github/workflows/reusable-success.yml
