--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -137,12 +137,6 @@ jobs:
           --all-features \
           -- --deny warnings
 
-  success:
-    runs-on: ubuntu-latest
+  test:
     needs: [compiles, rust, rpc_client, doctest, clippy]
-    if: ${{ always() && !cancelled() }}
-    steps:
-      - if: ${{ contains(needs.*.result, 'failure') }}
-        run: exit 1
-      - if: ${{ !contains(needs.*.result, 'failure') }}
-        run: exit 0
+    uses: ./.github/workflows/reusable-success.yml
