--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -65,7 +65,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: DavidAnson/markdownlint-cli2-action@v11
         with:
-          globs: '**/*.md'
+          globs: |
+            '**/*.md'
+            '#.github'
 
   lint:
     needs: [proto, rust, toml, markdown]
