ci: markdown formatting (#275)
## Summary

Adds a markdown linter, enforces via CI, and brings all existing
markdown up to standard.

## Background

We had markdown files with a lot of different formatting preferences.

## Changes

- Use `markdownlint-cli2` github action for ci tests
- updated all markdown to be compliant
- README updates
  - section on formatting
  - some content which was stale and formatted incorrectly removed

## Testing

- run markdownlint locally + the added ci jobs

## Related Issues

closes #274

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -57,6 +57,18 @@ jobs:
       - name: run taplo
         run: taplo format --check
 
+  markdown:
+    runs-on: ubuntu-22.04
+    needs: run_checker
+    if: ${{ needs.run_checker.outputs.run_lint_markdown }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: DavidAnson/markdownlint-cli2-action@v11
+        with:
+          globs: |
+            '**/*.md'
+            '#.github'
+
   lint:
-    needs: [proto, rust, toml]
+    needs: [proto, rust, toml, markdown]
     uses: ./.github/workflows/reusable-success.yml
